@@ -1,3 +1,8 @@
+2005-05-22  Naba Kumar  <naba@gnome.org>
+
+	* anjuta.spec.in: Fixed spec file
+	* plugins/editor/text_editor.c: Fixed gnome-vfs monitor.
+
 2005-05-21  Sebastien Granjoux  <seb.sfo@free.fr>
 	
 	* TODO.tasks: Updated.
